# esp-stub-lib

./: .astyle-rules.yml  .check_copyright_config.yaml  .clang-format  .codespellrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTENANCE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build_example.yml  dangerjs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  release.yml
example/: CMakeLists.txt  build.sh  stub_main.c  stub_main.h
example/cmake/: build-flags.cmake  util.cmake
example/ld/: esp32h21.ld  esp32h4.ld  esp32s31.ld
include/common/: flash_impl_get_id_from_rom.h  flash_impl_init_auto_spiconfig.h  flash_impl_init_no_spiconfig.h  rom_impl_flash_config1.h  rom_impl_flash_config2.h  soc_utils.h  target_flash.h  target_rom.h
include/esp-stub-lib/: bit_utils.h  cache.h  clock.h  core.h  err.h  flash.h  log.h  md5.h  mem_utils.h  miniz.h  mmu.h  rom_wrappers.h  sdio.h  security.h  sha.h  sha256.h  slip.h  soc_utils.h  test_drv.h  trax_mem.h  uart.h  usb_cdc.h  usb_otg.h  usb_serial_jtag.h
include/private/: rom.h  soc_utils.h  stub_lib_err.h
src/: cache.c  clock.c  flash.c  log.c  log_buf.c  log_common.c  log_uart.c  log_usj.c  md5.c  mem_utils.c  mmu.c  rom_wrappers.c  sdio.c  security.c  sha.c  sha256.c  slip.c  test_drv.c  uart.c  usb_cdc.c  usb_otg.c  usb_serial_jtag.c
src/common/: CMakeLists.txt
src/common/include/common/: log.h
src/common/src/: log_buf.c  log_printf.c  log_uart.c
src/core/: core.c
src/esp32/: CMakeLists.txt
src/esp32/include/soc/: spi_reg.h
src/esp32/ld/: esp32.rom.libc-funcs.ld
src/esp32/src/: flash.c  target_flash.c  target_uart.c  trax.c  uart.c
src/esp32c2/: CMakeLists.txt
src/esp32c2/include/: esp_rom_caps.h
src/esp32c2/include/soc/: spi_mem_reg.h
src/esp32c2/ld/: esp32c2.rom.api.ld  esp32c2.rom.ld  esp32c2.rom.libc.ld
src/esp32c2/src/: target_uart.c  uart.c
src/esp32c3/: CMakeLists.txt
src/esp32c3/include/: soc.h
src/esp32c3/include/soc/: README.txt  spi_mem_reg.h
src/esp32c3/src/: flash.c  uart.c
src/esp32c5/: CMakeLists.txt
src/esp32c5/include/soc/: spi1_mem_reg.h
src/esp32c5/include/target_spec/: periph_defs.h
src/esp32c6/: CMakeLists.txt
src/esp32c6/include/: soc.h
src/esp32c6/include/soc/: spi_mem_reg.h
src/esp32c6/ld/: esp32c6.rom.libgcc.ld
src/esp32c6/src/: flash.c  uart.c
src/esp32c61/: CMakeLists.txt
src/esp32c61/include/: esp_rom_caps.h
src/esp32c61/include/soc/: spi1_mem_reg.h
src/esp32c61/ld/: esp32c61.rom.api.ld
src/esp32c61/src/: flash.c  target_uart.c  uart.c
src/esp32h2/: CMakeLists.txt
src/esp32h2/include/soc/: spi_mem_reg.h
src/esp32h2/include/target_spec/: periph_defs.h
src/esp32h2/ld/: esp32h2.rom.api.ld  esp32h2.rom.libc.ld
src/esp32h21/: CMakeLists.txt
src/esp32h21/include/: esp_rom_caps.h
src/esp32h21/include/soc/: reg_base.h  spi1_mem_reg.h
src/esp32h21/ld/: esp32h21.rom.libc.ld
src/esp32h4/: CMakeLists.txt
src/esp32h4/ld/: esp32h4.rom.api.ld  esp32h4.rom.libc.ld
src/esp32p4/: CMakeLists.txt
src/esp32p4/include/soc/: spi1_mem_c_reg.h  spi_mem_c_reg.h
src/esp32p4/include/target_spec/: periph_defs.h
src/esp32p4/src/: flash.c  uart.c
src/esp32s2/: CMakeLists.txt
src/esp32s2/include/soc/: spi_mem_reg.h
src/esp32s2/src/: flash.c  target_uart.c  trax.c  uart.c
src/esp32s3/: CMakeLists.txt
src/esp32s3/include/soc/: spi_mem_reg.h
src/esp32s3/ld/: esp32s3.rom.libc.ld
src/esp32s3/src/: flash.c  target_uart.c  trax.c  uart.c
src/esp8266/: CMakeLists.txt
src/esp8266/ld/: esp8266.rom.ld
src/esp8266/src/: flash.c  target_flash.c  target_uart.c  uart.c
